--- a/package.json
+++ b/package.json
@@ -1,18 +1,19 @@
 {
-  "name": "statistics",
+  "name": "a",
   "version": "1.0.0",
   "description": "A program to statistics other program info",
   "main": "main.js",
-  "scripts": {
-    "start": "electron .",
-    "pack": "electron-builder --dir",
-    "dist": "electron-builder"
-  },
   "build": {
-    "appId": "myEXE",
+    "appId": "com.xxx.app",
     "mac": {
-      "category": " your.app.category.type "
+      "target": ["dmg","zip"]
+    },
+    "win": {
+      "target": ["nsis","zip"]
     }
+  },
+  "scripts": {
+    "dist": "electron-builder --win --x64"
   },
   "keywords": [
     "Electron",
