--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "a",
+  "name": "b",
   "version": "1.0.0",
   "description": "A program to statistics other program info",
   "main": "main.js",
